@@ -55,7 +55,7 @@ import org.hisp.dhis.analytics.AnalyticsTableHookService;
 import org.hisp.dhis.analytics.AnalyticsTableType;
 import org.hisp.dhis.analytics.AnalyticsTableUpdateParams;
 import org.hisp.dhis.analytics.partition.PartitionManager;
-import org.hisp.dhis.analytics.table.model.AnalyticsColumnType;
+import org.hisp.dhis.analytics.table.model.AnalyticsDimensionType;
 import org.hisp.dhis.analytics.table.model.AnalyticsTable;
 import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
@@ -96,8 +96,6 @@ import org.springframework.util.Assert;
 @Slf4j
 @Service("org.hisp.dhis.analytics.EventAnalyticsTableManager")
 public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManager {
-
-  public static final String OU_GEOMETRY_COL_SUFFIX = "_geom";
 
   static final String[] EXPORTABLE_EVENT_STATUSES = {"'COMPLETED'", "'ACTIVE'", "'SCHEDULE'"};
 
@@ -340,26 +338,24 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
             inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
             inner join ${programstage} ps on ev.programstageid=ps.programstageid \
             inner join ${program} pr on en.programid=pr.programid and en.deleted = false \
-            inner join ${categoryoptioncombo} ao on ev.attributeoptioncomboid=ao.categoryoptioncomboid \
             left join ${trackedentity} te on en.trackedentityid=te.trackedentityid and te.deleted = false \
             left join ${organisationunit} registrationou on te.organisationunitid=registrationou.organisationunitid \
             inner join ${organisationunit} ou on ev.organisationunitid=ou.organisationunitid \
+            left join analytics_rs_dateperiodstructure dps on cast(${eventDateExpression} as date)=dps.dateperiod \
             left join analytics_rs_orgunitstructure ous on ev.organisationunitid=ous.organisationunitid \
             left join analytics_rs_organisationunitgroupsetstructure ougs on ev.organisationunitid=ougs.organisationunitid \
-            and (cast(${eventDateMonth} as date)=ougs.startdate or ougs.startdate is null) \
             left join ${organisationunit} enrollmentou on en.organisationunitid=enrollmentou.organisationunitid \
             inner join analytics_rs_categorystructure acs on ev.attributeoptioncomboid=acs.categoryoptioncomboid \
-            left join analytics_rs_dateperiodstructure dps on cast(${eventDateExpression} as date)=dps.dateperiod \
             where ev.lastupdated < '${startTime}' ${partitionClause} \
             and pr.programid=${programId} \
             and ev.organisationunitid is not null \
             and (${eventDateExpression}) is not null \
+            and (ougs.startdate is null or dps.monthstartdate=ougs.startdate) \
             and dps.year >= ${firstDataYear} \
             and dps.year <= ${latestDataYear} \
             and ev.status in (${exportableEventStatues}) \
             and ev.deleted = false""",
             Map.of(
-                "eventDateMonth", sqlBuilder.dateTrunc("month", eventDateExpression),
                 "eventDateExpression", eventDateExpression,
                 "partitionClause", partitionClause,
                 "startTime", toLongDate(params.getStartTime()),
@@ -398,53 +394,14 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
    */
   private List<AnalyticsTableColumn> getColumns(Program program) {
     List<AnalyticsTableColumn> columns = new ArrayList<>(fixedColumns);
-
-    if (program.hasNonDefaultCategoryCombo()) {
-      List<Category> categories = program.getCategoryCombo().getCategories();
-
-      for (Category category : categories) {
-        if (category.isDataDimension()) {
-          columns.add(
-              AnalyticsTableColumn.builder()
-                  .name(category.getUid())
-                  .columnType(AnalyticsColumnType.DYNAMIC)
-                  .dataType(CHARACTER_11)
-                  .selectExpression("acs." + quote(category.getUid()))
-                  .created(category.getCreated())
-                  .build());
-        }
-      }
-    }
-
+    columns.addAll(getAttributeCategoryColumns(program));
     columns.addAll(getOrganisationUnitLevelColumns());
     columns.add(getOrganisationUnitNameHierarchyColumn());
     columns.addAll(getOrganisationUnitGroupSetColumns());
     columns.addAll(getAttributeCategoryOptionGroupSetColumns());
     columns.addAll(getPeriodTypeColumns("dps"));
-
-    columns.addAll(
-        program.getAnalyticsDataElements().stream()
-            .map(de -> getColumnForDataElement(de, false))
-            .flatMap(Collection::stream)
-            .toList());
-
-    columns.addAll(
-        program.getAnalyticsDataElementsWithLegendSet().stream()
-            .map(de -> getColumnForDataElement(de, true))
-            .flatMap(Collection::stream)
-            .toList());
-
-    columns.addAll(
-        program.getNonConfidentialTrackedEntityAttributes().stream()
-            .map(tea -> getColumnForTrackedEntityAttribute(tea, false))
-            .flatMap(Collection::stream)
-            .toList());
-
-    columns.addAll(
-        program.getNonConfidentialTrackedEntityAttributesWithLegendSet().stream()
-            .map(tea -> getColumnForTrackedEntityAttribute(tea, true))
-            .flatMap(Collection::stream)
-            .toList());
+    columns.addAll(getDataElementColumns(program));
+    columns.addAll(getAttributeColumns(program));
 
     if (program.isRegistration()) {
       columns.add(EventAnalyticsColumn.TRACKED_ENTITY);
@@ -453,20 +410,69 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
       }
     }
     if (sqlBuilder.supportsDeclarativePartitioning()) {
-      // Add the year column required for declarative partitioning
       columns.add(getPartitionColumn());
     }
 
     return filterDimensionColumns(columns);
   }
 
-  @Override
-  protected AnalyticsTableColumn getPartitionColumn() {
+  /**
+   * Returns a partition column.
+   *
+   * @return an {@link AnalyticsTableColumn}.
+   */
+  private AnalyticsTableColumn getPartitionColumn() {
     return AnalyticsTableColumn.builder()
         .name("year")
         .dataType(INTEGER)
         .selectExpression("dps.year")
         .build();
+  }
+
+  /**
+   * Returns columns for attribute categories of the given program.
+   *
+   * @param program the {@link Program}.
+   * @return a list of {@link AnalyticsTableColumn}.
+   */
+  private List<AnalyticsTableColumn> getAttributeCategoryColumns(Program program) {
+    if (program.hasNonDefaultCategoryCombo()) {
+      List<Category> categories = program.getCategoryCombo().getDataDimensionCategories();
+      return categories.stream()
+          .map(
+              category ->
+                  AnalyticsTableColumn.builder()
+                      .name(category.getUid())
+                      .dimensionType(AnalyticsDimensionType.DYNAMIC)
+                      .dataType(CHARACTER_11)
+                      .selectExpression("acs." + quote(category.getUid()))
+                      .created(category.getCreated())
+                      .build())
+          .toList();
+    }
+
+    return List.of();
+  }
+
+  /**
+   * Returns columns for data elements of the given program.
+   *
+   * @param program the {@link Program}.
+   * @return a list of {@link AnalyticsTableColumn}.
+   */
+  private List<AnalyticsTableColumn> getDataElementColumns(Program program) {
+    List<AnalyticsTableColumn> columns = new ArrayList<>();
+    columns.addAll(
+        program.getAnalyticsDataElements().stream()
+            .map(de -> getColumnForDataElement(de, false))
+            .flatMap(Collection::stream)
+            .toList());
+    columns.addAll(
+        program.getAnalyticsDataElementsWithLegendSet().stream()
+            .map(de -> getColumnForDataElement(de, true))
+            .flatMap(Collection::stream)
+            .toList());
+    return columns;
   }
 
   /**
@@ -489,6 +495,10 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     String sql = getSelectForInsert(dataElement, selectExpression, dataFilterClause);
     Skip skipIndex = skipIndex(dataElement.getValueType(), dataElement.hasOptionSet());
 
+    if (withLegendSet) {
+      return getColumnFromDataElementWithLegendSet(dataElement, selectExpression, dataFilterClause);
+    }
+
     if (dataElement.getValueType().isOrganisationUnit()) {
       columns.addAll(getColumnForOrgUnitDataElement(dataElement, dataFilterClause));
     }
@@ -496,17 +506,22 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     columns.add(
         AnalyticsTableColumn.builder()
             .name(dataElement.getUid())
-            .columnType(AnalyticsColumnType.DYNAMIC)
+            .dimensionType(AnalyticsDimensionType.DYNAMIC)
             .dataType(dataType)
             .selectExpression(sql)
             .skipIndex(skipIndex)
             .build());
 
-    return withLegendSet
-        ? getColumnFromDataElementWithLegendSet(dataElement, selectExpression, dataFilterClause)
-        : columns;
+    return columns;
   }
 
+  /**
+   * Returns a list of columns.
+   *
+   * @param dataElement the {@link DataElement}.
+   * @param dataFilterClause the data filter SQL clause.
+   * @return a list of {@link AnalyticsTableColumn}.
+   */
   private List<AnalyticsTableColumn> getColumnForOrgUnitDataElement(
       DataElement dataElement, String dataFilterClause) {
     List<AnalyticsTableColumn> columns = new ArrayList<>();
@@ -523,7 +538,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
       columns.add(
           AnalyticsTableColumn.builder()
               .name((dataElement.getUid() + OU_GEOMETRY_COL_SUFFIX))
-              .columnType(AnalyticsColumnType.DYNAMIC)
+              .dimensionType(AnalyticsDimensionType.DYNAMIC)
               .dataType(GEOMETRY)
               .selectExpression(geoSql)
               .indexType(IndexType.GIST)
@@ -536,7 +551,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     columns.add(
         AnalyticsTableColumn.builder()
             .name((dataElement.getUid() + OU_NAME_COL_SUFFIX))
-            .columnType(AnalyticsColumnType.DYNAMIC)
+            .dimensionType(AnalyticsDimensionType.DYNAMIC)
             .dataType(TEXT)
             .selectExpression(ouNameSql)
             .skipIndex(SKIP)
@@ -545,30 +560,25 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     return columns;
   }
 
-  private List<AnalyticsTableColumn> getColumnForTrackedEntityAttribute(
-      TrackedEntityAttribute attribute, boolean withLegendSet) {
+  /**
+   * Returns columns for attributes of the given program.
+   *
+   * @param program the {@link Program}.
+   * @return a list of {@link AnalyticsTableColumn}.
+   */
+  private List<AnalyticsTableColumn> getAttributeColumns(Program program) {
     List<AnalyticsTableColumn> columns = new ArrayList<>();
-
-    DataType dataType = getColumnType(attribute.getValueType(), isSpatialSupport());
-    String selectExpression = getSelectExpressionForAttribute(attribute.getValueType(), "value");
-    String dataExpression = getDataFilterClause(attribute);
-    String sql = selectForInsert(attribute, selectExpression, dataExpression);
-    Skip skipIndex = skipIndex(attribute.getValueType(), attribute.hasOptionSet());
-
-    if (attribute.getValueType().isOrganisationUnit()) {
-      columns.addAll(getColumnsForOrgUnitTrackedEntityAttribute(attribute, dataExpression));
-    }
-
-    columns.add(
-        AnalyticsTableColumn.builder()
-            .name(attribute.getUid())
-            .columnType(AnalyticsColumnType.DYNAMIC)
-            .dataType(dataType)
-            .selectExpression(sql)
-            .skipIndex(skipIndex)
-            .build());
-
-    return withLegendSet ? getColumnForAttributeWithLegendSet(attribute) : columns;
+    columns.addAll(
+        program.getNonConfidentialTrackedEntityAttributes().stream()
+            .map(this::getColumnForAttribute)
+            .flatMap(Collection::stream)
+            .toList());
+    columns.addAll(
+        program.getNonConfidentialTrackedEntityAttributesWithLegendSet().stream()
+            .map(this::getColumnForAttributeWithLegendSet)
+            .flatMap(Collection::stream)
+            .toList());
+    return columns;
   }
 
   /**
@@ -610,58 +620,16 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
                   .selectExpression(sql)
                   .build();
             })
-        .collect(toList());
+        .toList();
   }
 
   /**
-   * Returns a list of columns based on the given attribute.
-   *
-   * @param attribute the {@link TrackedEntityAttribute}.
-   * @param dataFilterClause the data filter clause.
-   * @return a list of {@link AnalyticsTableColumn}.
-   */
-  private List<AnalyticsTableColumn> getColumnsForOrgUnitTrackedEntityAttribute(
-      TrackedEntityAttribute attribute, String dataFilterClause) {
-    List<AnalyticsTableColumn> columns = new ArrayList<>();
-
-    String fromClause =
-        qualifyVariables("from ${organisationunit} ou where ou.uid = (select value");
-
-    if (isSpatialSupport()) {
-      String fromType = "ou.geometry " + fromClause;
-      String geoSql = selectForInsert(attribute, fromType, dataFilterClause);
-      columns.add(
-          AnalyticsTableColumn.builder()
-              .name((attribute.getUid() + OU_GEOMETRY_COL_SUFFIX))
-              .columnType(AnalyticsColumnType.DYNAMIC)
-              .dataType(GEOMETRY)
-              .selectExpression(geoSql)
-              .indexType(IndexType.GIST)
-              .build());
-    }
-
-    String fromTypeSql = "ou.name " + fromClause;
-    String ouNameSql = selectForInsert(attribute, fromTypeSql, dataFilterClause);
-
-    columns.add(
-        AnalyticsTableColumn.builder()
-            .name((attribute.getUid() + OU_NAME_COL_SUFFIX))
-            .columnType(AnalyticsColumnType.DYNAMIC)
-            .dataType(TEXT)
-            .selectExpression(ouNameSql)
-            .skipIndex(SKIP)
-            .build());
-
-    return columns;
-  }
-
-  /**
-   * Creates a select statement for the given select expression.
+   * Retyrns a select statement for the given select expression.
    *
    * @param dataElement the data element to create the select statement for.
    * @param selectExpression the select expression.
    * @param dataFilterClause the data filter clause.
-   * @return A SQL select expression for the data element.
+   * @return a select expression.
    */
   private String getSelectForInsert(
       DataElement dataElement, String selectExpression, String dataFilterClause) {
@@ -728,7 +696,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
    * is valid according to the value type. For other value types, returns the empty string.
    *
    * @param dataElement the {@link DataElement}.
-   * @return an filter expression.
+   * @return a data filter clause.
    */
   private String getDataFilterClause(DataElement dataElement) {
     String uid = dataElement.getUid();
@@ -745,27 +713,13 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
   }
 
   /**
-   * For numeric and date value types, returns a data filter clause for checking whether the value
-   * is valid according to the value type. For other value types, returns the empty string.
-   *
-   * @param attribute the {@link TrackedEntityAttribute}.
-   * @return an filter expression.
-   */
-  private String getDataFilterClause(TrackedEntityAttribute attribute) {
-    if (attribute.isNumericType()) {
-      return getNumericClause();
-    }
-    return attribute.isDateType() ? getDateClause() : EMPTY;
-  }
-
-  /**
    * Returns a list of years for which data exist.
    *
    * @param params the {@link AnalyticsTableUpdateParams}.
    * @param program the {@link Program}.
    * @param firstDataYear the first year to include.
    * @param lastDataYear the last data year to include.
-   * @return a list of years for which data exist.
+   * @return a list of years for which data exists.
    */
   private List<Integer> getDataYears(
       AnalyticsTableUpdateParams params,
@@ -782,6 +736,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
                     "fromDate",
                     toMediumDate(params.getFromDate())))
             : EMPTY;
+
     String sql =
         replaceQualify(
             """
